# homeassistant-eurostar

./: .gitignore  LICENSE  README.md  hacs.json  pyproject.toml
.github/workflows/: ci.yml
custom_components/eurostar/: __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py
custom_components/eurostar/translations/: en.json
tests/: test_coordinator.py  test_sensor.py
