[project]
name = "homeassistant-eurostar"
version = "0.1.0"
description = "Home Assistant integration for Eurostar train schedules and real-time data"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "Jelmer Vernooij", email = "jelmer@jelmer.uk" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "homeassistant",
    "gtfs-realtime-bindings>=2.0.0",
    "protobuf>=4.21.0",
]

[project.urls]
Homepage = "https://github.com/jelmer/homeassistant-eurostar"
Repository = "https://github.com/jelmer/homeassistant-eurostar"
Issues = "https://github.com/jelmer/homeassistant-eurostar/issues"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "B",
    "SIM",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
